This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Objects/bytesobject.c should include stringdefs.h, instead of defining its own macros
Type: behavior Stage: resolved
Components: Interpreter Core Versions: Python 3.2
process
Status: closed Resolution: accepted
Dependencies: Superseder:
Assigned To: eric.smith Nosy List: eric.smith, victorpoluceno
Priority: normal Keywords: easy

Created on 2009-04-13 21:15 by eric.smith, last changed 2022-04-11 14:56 by admin. This issue is now closed.

Messages (3)
msg85954 - (view) Author: Eric V. Smith (eric.smith) * (Python committer) Date: 2009-04-13 21:15
All of the macros it defines around line 565 should either already be in
stringdefs.h, or they should be added there.

The same issue exists in Objects/bytearrayobject.c. I haven't looked in
2.7, but I assume the same problem exists there.
msg95828 - (view) Author: Eric V. Smith (eric.smith) * (Python committer) Date: 2009-11-30 00:56
This does not apply to 2.x. In both py3k and trunk,
Objects/bytearrayobject.c uses stringlib with some private defines. But
since those defines are only used in bytearrayobject.c, there's nothing
to be gained by factoring then out into a bytearraydef.h file.

So, I'm just going to fix this in Objects/bytesobjects.c, which only
appears in py3k.
msg95829 - (view) Author: Eric V. Smith (eric.smith) * (Python committer) Date: 2009-11-30 01:02
Fixed in r76595.
History
Date User Action Args
2022-04-11 14:56:47adminsetgithub: 49998
2009-11-30 01:02:16eric.smithsetstatus: open -> closed
resolution: accepted
messages: + msg95829

stage: resolved
2009-11-30 00:56:21eric.smithsetmessages: + msg95828
versions: + Python 3.2, - Python 3.1, Python 2.7
2009-04-16 01:45:44victorpolucenosetnosy: + victorpoluceno
2009-04-13 21:15:08eric.smithcreate