Objects/stringlib/stringdefs.h
@@ -21,6 +21,7 @@
 #define STRINGLIB_NEW            PyBytes_FromStringAndSize
 #define STRINGLIB_RESIZE         _PyBytes_Resize
 #define STRINGLIB_CHECK          PyBytes_Check
+#define STRINGLIB_CHECK_EXACT    PyBytes_CheckExact
 #define STRINGLIB_CMP            memcmp
 #define STRINGLIB_TOSTR          PyObject_Str
 #define STRINGLIB_GROUPING       _PyBytes_InsertThousandsGrouping
